# smart-receivables

./: .gitignore  DEPLOYMENT_GUIDE.md  DEPLOY_TO_STREAMLIT.md  app.py  get_fresh_key.py  requirements.txt  test_api.py  test_current_key.py  test_invoices.csv  test_key_loading.py  test_new_key.py  test_payments.csv  test_streamlit_api.py
.devcontainer/: devcontainer.json
InvoiceFlow/: .env.example  .replit  EMAIL_FIX_SUMMARY.md  README.md  USER_GUIDE.md  ai_client.py  ai_client_simple.py  app.py  app_min.py  chatbot.py  dashboards.py  data_quality.py  email_debug.py  email_utils.py  env_example.txt  generate_sample_data.py  integrations.py  ml_models.py  pyproject.toml  replit.md  requirements.txt  run_app.sh  sample_invoices.csv  sample_payments.csv  simple_email_system.py  smart_actions.py  style.css  test_api_in_app.py  test_app.py  test_email.py  test_fixed_email.py  utils.py
InvoiceFlow/.streamlit/: config.toml  secrets.toml
InvoiceFlow/attached_assets/: Pasted--JPMorgan-Smart-Receivables-Navigator-full-production-build-You-are-an-expert-Pyt-1754502641345_1754502641345.txt
InvoiceFlow/tests/: test_etl.py  test_integrations.py
