[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.48.0",
    "pandas>=2.0.0,<2.1.0",
    "numpy>=1.21.0,<2.0.0",
    "plotly>=6.2.0",
    "scikit-learn>=1.7.1",
    "openai>=1.99.1",
    "openrouter>=0.1.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "sendgrid>=6.12.4",
    "faker>=37.5.3",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.1",
    "google-api-python-client>=2.100.0",
    "msal>=1.24.0",
    "O365>=2.0.0",
]
